[package]
name = "alg_lang"
version = "0.1.0"
authors = ["qiujiangkun <qiujiangkun@foxmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = { version = "0.4", features = ["max_level_debug", "release_max_level_warn"] }
clap = '*'
